fixed calendar alignment

--- a/static/style.css
+++ b/static/style.css
@@ -49,8 +49,7 @@
 }
 
 .hd-schedule {
-    margin: 2em 1em 2em 2em; 
-    width: 95%;
+    margin-top: 2em; 
     text-align: center;
 }
 
